# the_seven_crystals

./: .gitignore  README.txt  Readme.txt  build.sh  meson.build  wasm-cross.txt
img/: big_player.ase  tileset3.ase  title.ase
inc/: boss.h  bullet.h  data.h  entity.h  gfx.h  mapgen.h  mobs.h  player.h  tilemap.h
src/: boss.c  bullet.c  data.c  entity.c  game.c  game_over.c  gfx.c  main.c  mapgen.c  meson.build  mobs.c  pause.c  player.c  tilemap.c  title.c  win.c
